--- a/02 编程语言/Golang Everything/垃圾回收:异常:接口:函数:方法.md
+++ b/02 编程语言/Golang Everything/垃圾回收:异常:接口:函数:方法.md
@@ -1,3 +1,32 @@
+- [接口](#接口)
+  - [interface的定义与概念](#interface的定义与概念)
+  - [Go interface的原理问题](#go-interface的原理问题)
+  - [值接收者和指针接收者实现接口的区别](#值接收者和指针接收者实现接口的区别)
+  - [两个interface 能不能⽐较](#两个interface-能不能较)
+  - [接⼝是怎么实现的？](#接是怎么实现的)
+  - [空接口](#空接口)
+  - [类型断言（type assertion）](#类型断言type-assertion)
+- [垃圾回收](#垃圾回收)
+  - [Go的垃圾回收机制](#go的垃圾回收机制)
+  - [GC 的触发条件？](#gc-的触发条件)
+  - [内存模型中为什么小对象多了会造成 GC 压力？](#内存模型中为什么小对象多了会造成-gc-压力)
+- [异常](#异常)
+  - [go语言触发异常的场景有哪些](#go语言触发异常的场景有哪些)
+  - [defer](#defer)
+  - [如何从 panic 中恢复](#如何从-panic-中恢复)
+  - [Recover捕获异常的时机](#recover捕获异常的时机)
+  - [在循环内部执行defer语句会发生啥](#在循环内部执行defer语句会发生啥)
+- [反射](#反射)
+- [缓存](#缓存)
+- [泛型](#泛型)
+- [函数](#函数)
+  - [go语言的main函数](#go语言的main函数)
+  - [go语言中局部变量和全局变量的缺省值是什么](#go语言中局部变量和全局变量的缺省值是什么)
+  - [函数传参是值类型还是引用类型？](#函数传参是值类型还是引用类型)
+  - [值接收者和指针接收者的区别？](#值接收者和指针接收者的区别)
+  - [Golang可变参数](#golang可变参数)
+- [方法](#方法)
+- [封装](#封装)
 # 接口
 
 ## interface的定义与概念
