--- a/02 编程语言/Golang Everything/基础与数据类型.md
+++ b/02 编程语言/Golang Everything/基础与数据类型.md
@@ -1,3 +1,47 @@
+- [基础](#基础)
+  - [GO的优点/优越性](#go的优点优越性)
+  - [面向对象的三大特性](#面向对象的三大特性)
+  - [关键字](#关键字)
+  - [两个 Nil 可能不相等吗？](#两个-nil-可能不相等吗)
+  - [Go与面向对象问题](#go与面向对象问题)
+  - [string 类型的值可以修改吗](#string-类型的值可以修改吗)
+  - [哪些类型不支持比较？](#哪些类型不支持比较)
+  - [哪些类型的值可以被取地址，哪些不可以被取地址？](#哪些类型的值可以被取地址哪些不可以被取地址)
+  - [类型占用字节数](#类型占用字节数)
+  - [引用类型](#引用类型)
+  - [new 和 make](#new-和-make)
+  - [nil是什么](#nil是什么)
+- [数组](#数组)
+  - [array 类型的值作为函数参数是引⽤传递还是值传递？](#array-类型的值作为函数参数是引传递还是值传递)
+- [slice](#slice)
+  - [数组和slice的区别](#数组和slice的区别)
+  - [零切片、空切⽚、nil切⽚](#零切片空切nil切)
+  - [slice深拷⻉和浅拷⻉](#slice深拷和浅拷)
+  - [Slice 如何扩容？](#slice-如何扩容)
+  - [拷贝大切片一定比小切片代价大吗？](#拷贝大切片一定比小切片代价大吗)
+  - [参数传递 切片和切片指针](#参数传递-切片和切片指针)
+  - [range遍历切片问题](#range遍历切片问题)
+  - [字符串转成byte切片，会发生内存拷贝吗？](#字符串转成byte切片会发生内存拷贝吗)
+  - [slice能用“==”判定相等吗？](#slice能用判定相等吗)
+- [map](#map)
+  - [map 实现原理](#map-实现原理)
+  - [map 如何实现顺序读取？](#map-如何实现顺序读取)
+  - [map 初始化问题](#map-初始化问题)
+  - [map 的扩容机制](#map-的扩容机制)
+  - [使⽤range 迭代 map 是有序的吗?](#使range-迭代-map-是有序的吗)
+  - [使用值为 nil 的 slice、map会发生啥](#使用值为-nil-的-slicemap会发生啥)
+  - [访问 map 中的 key，需要注意啥](#访问-map-中的-key需要注意啥)
+  - [slice map 非线性安全问题](#slice-map-非线性安全问题)
+  - [如何支持并发读写](#如何支持并发读写)
+- [结构体](#结构体)
+  - [Struct 能不能比较？](#struct-能不能比较)
+  - [结构体嵌入机制和匿名成员](#结构体嵌入机制和匿名成员)
+- [JSON格式](#json格式)
+  - [JSON 概念](#json-概念)
+  - [解析 JSON 数据时，默认将数值当做哪种类型](#解析-json-数据时默认将数值当做哪种类型)
+  - [JSON 标准库对 nil slice 和 空 slice 的处理是一致的吗](#json-标准库对-nil-slice-和-空-slice-的处理是一致的吗)
+  - [json包里使用的时候，结构体里的变量不加tag能不能正常转成json里的字段？](#json包里使用的时候结构体里的变量不加tag能不能正常转成json里的字段)
+- [HTML](#html)
 # 基础
 
 ## GO的优点/优越性
