--- a/02 编程语言/Golang Everything/并发.md
+++ b/02 编程语言/Golang Everything/并发.md
@@ -1,5 +1,32 @@
 通过通信来共享内存，而不是共享内存来通信。
-
+- [概念](#概念)
+  - [协程、线程、进程的区别](#协程线程进程的区别)
+  - [协程Goroutine 和线程的区别？](#协程goroutine-和线程的区别)
+- [goroutine](#goroutine)
+  - [goroutine的概念与使用](#goroutine的概念与使用)
+  - [GPM 调度系统](#gpm-调度系统)
+  - [Go中的操作系统线程和goroutine的关系：](#go中的操作系统线程和goroutine的关系)
+  - [怎么查看 Goroutine 的数量？怎么限制 Goroutine 的数量？](#怎么查看-goroutine-的数量怎么限制-goroutine-的数量)
+  - [为什么会发生内存泄露？](#为什么会发生内存泄露)
+  - [Goroutine 发生了泄漏如何检测？](#goroutine-发生了泄漏如何检测)
+  - [主协程如何等其余协程完再操作？](#主协程如何等其余协程完再操作)
+  - [waitGroup传值会发生什么](#waitgroup传值会发生什么)
+- [channel](#channel)
+  - [channel概念与原理](#channel概念与原理)
+  - [常见的channel异常](#常见的channel异常)
+  - [CSP模型（Communicating Sequential Processes）](#csp模型communicating-sequential-processes)
+  - [channel 为什么它可以做到线程安全？](#channel-为什么它可以做到线程安全)
+  - [Channel 是同步的还是异步的？](#channel-是同步的还是异步的)
+  - [无缓冲和缓冲通道之间有什么区别？](#无缓冲和缓冲通道之间有什么区别)
+  - [select](#select)
+- [并发安全、数据竞态、锁](#并发安全数据竞态锁)
+  - [并发安全](#并发安全)
+  - [context 结构原理](#context-结构原理)
+  - [数据竞态](#数据竞态)
+  - [Mutex互斥锁 rwmutex读写锁 sync包](#mutex互斥锁-rwmutex读写锁-sync包)
+  - [读写锁或者互斥锁读的时候能写吗?](#读写锁或者互斥锁读的时候能写吗)
+  - [除了加 Mutex 锁外还有哪些方式安全读写共享变量？](#除了加-mutex-锁外还有哪些方式安全读写共享变量)
+  - [内存逃逸](#内存逃逸)
 # 概念
 
 ## 协程、线程、进程的区别
