--- a/04 数据库/MySQL/优化问题.md
+++ b/04 数据库/MySQL/优化问题.md
@@ -1,3 +1,10 @@
+- [SQL优化的一般步骤是什么，怎么看执行计划（explain），如何理解其中各个字段的含义？](#sql优化的一般步骤是什么怎么看执行计划explain如何理解其中各个字段的含义)
+- [SQL提示](#sql提示)
+- [如果某个表有近千万数据，CRUD（增删改查）比较慢，如何优化？](#如果某个表有近千万数据crud增删改查比较慢如何优化)
+- [分库分表](#分库分表)
+- [一条sql执行过长的时间，你如何优化，从哪些方面入手？](#一条sql执行过长的时间你如何优化从哪些方面入手)
+- [优化SQL有哪些手段](#优化sql有哪些手段)
+- [大表查询的优化方案](#大表查询的优化方案)
 ## SQL优化的一般步骤是什么，怎么看执行计划（explain），如何理解其中各个字段的含义？
 
 1. 先使用show [session| global ]status 命令查看各种 sql (增删改查等等)的执行频率
