--- a/03 算法笔记/算法笔记.md
+++ b/03 算法笔记/算法笔记.md
@@ -1,3 +1,38 @@
+- [排序算法](#排序算法)
+	- [**插入排序**](#插入排序)
+	- [选择排序（Selection Sort）](#选择排序selection-sort)
+	- [**希尔排序**](#希尔排序)
+	- [**直接选择排序**](#直接选择排序)
+	- [堆排序](#堆排序)
+	- [**冒泡排序**](#冒泡排序)
+	- [快速排序](#快速排序)
+	- [归并排序](#归并排序)
+- [数据结构](#数据结构)
+	- [数组/链表](#数组链表)
+		- [前缀和](#前缀和)
+		- [差分数组](#差分数组)
+		- [双指针](#双指针)
+		- [二分查找](#二分查找)
+		- [滑动窗口](#滑动窗口)
+		- [](#)
+	- [队列/栈](#队列栈)
+		- [括号题](#括号题)
+		- [LRU](#lru)
+	- [树](#树)
+		- [二叉树](#二叉树)
+		- [二叉搜索树](#二叉搜索树)
+	- [图](#图)
+		- [拓扑排列](#拓扑排列)
+		- [二分图判定](#二分图判定)
+		- [Union-Find(并查集)](#union-find并查集)
+		- [最小生成树](#最小生成树)
+- [暴力搜索](#暴力搜索)
+	- [DFS/回溯算法](#dfs回溯算法)
+		- [](#-1)
+	- [BFS](#bfs)
+- [动态规划](#动态规划)
+- [数学相关](#数学相关)
+	- [凸包问题](#凸包问题)
 # 排序算法
 
 ## **插入排序** 
