--- a/01 基础知识/设计模式.md
+++ b/01 基础知识/设计模式.md
@@ -1,16 +1,85 @@
-待整理
+# Java设计模式学习
+
+- **本文作者：** MrBird
+- **本文链接：** http://mrbird.cc/Java设计模式.html
+- **本文仅为个人学习整理转载**
+
+## 创建型模式
+
+### 简单工厂模式
+
+简单工厂模式严格意义上来说，并不属于设计模式中的一种，不过这里还是简单记录下。
+
+**定义**：由一个工厂对象决定创建出哪一种类型实例。客户端只需传入工厂类的参数，无心关心创建过程。
+
+**优点**：具体产品从客户端代码中抽离出来，解耦。
+
+**缺点**：工厂类职责过重，增加新的类型时，得修改工程类得代码，违背开闭原则。
+
+举例：新建Fruit水果抽象类，包含eat抽象方法：
+
+```
+public abstract class Fruit {
+
+    public abstract void eat();
+}
+```
 
 
 
-创建型
+其实现类Apple：
 
-1. Factory Method（工厂方法）：隔离创建对象的细节，使得创建对象的行为可扩展
-2. 2. Abstract Factory（抽象工厂）：该模式抽象出创建一组相关对象的接口，其中每个方法即为factory method3. Builder（建造者）：与factory不同的是，该模式包含了对象构造的若干过程，因此天然地与template结合4. Prototype（原型）: 用于以某个对象为模子创建一个新对象的场景，例如幻灯片中的母版与普通页、对象的克隆5. Singleton（单例）：
+```
+public class Apple extends Fruit{
+    @Override
+    public void eat() {
+        System.out.println("吃🍎");
+    }
+}
+```
 
-结构型
 
-1. Factory Method（工厂方法）：隔离创建对象的细节，使得创建对象的行为可扩展2. Abstract Factory（抽象工厂）：该模式抽象出创建一组相关对象的接口，其中每个方法即为factory method3. Builder（建造者）：与factory不同的是，该模式包含了对象构造的若干过程，因此天然地与template结合4. Prototype（原型）: 用于以某个对象为模子创建一个新对象的场景，例如幻灯片中的母版与普通页、对象的克隆5. Singleton（单例）：
 
-行为型
+新建创建Fruit的工厂类：
 
-13. Interpreter（解释器）：一般用于解释执行自定义的某种语法14. Template Method（模板方法）：框架与钩子15. Chain of Responsibility（责任链）：一组对象按照既定的顺序关联起来，依次处理请求，其中任一对象都有权停止调用传递16. Command（命令）: 将行为抽象和解耦17. Iterator（迭代器）：封装数据的访问行为（顺序、可见性等）18. Mediator（中介者）：用一个中介对象来封装一系列的交互;新增一个模块处理两个模块的交互19. Memento（备忘录）：将当前对象的状态信息保存为另一个对象，使得当前对象可以基于状态镜像快速恢复原状态20. Observer（观察者）: 订阅/发布模型，用于事件驱动的设计21. State（状态）：封装FSM（有限状态机）的状态与状态迁移，每个状态定义了自身的输入与状态迁移22. Strategy（策略）：使用接口即使用strategy，用于隔离变化23. Visitor（访问者）：数据与行为分离方法。通过这种分离，可达到一个被访问者动态添加新的操作而无需做其他的修改的效果
+```
+public class FruitFactory {
+
+    public Fruit produce(String name) {
+        if ("apple".equals(name)) {
+            return new Apple();
+        } else {
+            return null;
+        }
+    }
+}
+```
+
+
+
+新建个客户端测试一下：
+
+```
+public class Application {
+
+    public static void main(String[] args) {
+        FruitFactory factory = new FruitFactory();
+        Fruit fruit = factory.produce("apple");
+        fruit.eat();
+    }
+}
+```
+
+
+
+运行main方法，输出：
+
+```
+吃🍎
+```
+
+
+
+可以看到，客户端Application并未依赖具体的水果类型，只关心FruitFactory的入参，这就是客户端和具体产品解耦的体现，UML图如下：
+
+![QQ截图20191216103019.png](https://mrbird.cc/img/QQ%E6%88%AA%E5%9B%BE20191216103019.png)
