--- a/01 基础知识/设计模式/结构型.md
+++ b/01 基础知识/设计模式/结构型.md
@@ -1,5 +1,10 @@
 ## 结构型模式
 
+- **本文作者：** MrBird
+- **本文链接：** http://mrbird.cc/Java设计模式.html
+- **本文仅为个人学习整理转载**
+
+
 ### 外观模式
 
 外观模式又叫门面模式，提供了统一得接口，用来访问子系统中的一群接口。
