--- a/01 基础知识/操作系统.md
+++ b/01 基础知识/操作系统.md
@@ -624,7 +624,7 @@ select的几大缺点：
 
 与select相似，通过链表代替了之前select的数据结构，使得其没有上限限制。 
 
-![img](assets/1650790368793-a1bc85ee-301a-49cf-9905-bdd0f1ed73d6.png)
+<img src="assets/1650790368793-a1bc85ee-301a-49cf-9905-bdd0f1ed73d6.png" alt="img" style="zoom:67%;" />
 
 ![img](assets/1650790374078-70499928-2a14-4ade-bca4-dd9d8ef3982b.png)
 
