--- a/00 八股文集中营/基础 计算机网络.md
+++ b/00 八股文集中营/基础 计算机网络.md
@@ -101,7 +101,7 @@ UDP报文过长的话是交给IP切成小段，如果某段报废报文就废了
 1. TCP 建立连接之前，需要确认客户端与服务器双方的收包和发包的能力。第一次握手：服务端确认客户端的发送能力和自身的接受能力。第二次握手：客户端确认自身的收发能力和客户端的收发能力，但客户端仍不知到客户端的接收能力是否正常。第三次握手：服务端确认客户端的收发能力。
 2. 客户端由于某些原因发出了两个SNY请求连接数据包，服务端若以与新的请求建立连接并收到第三次握手时客户端发来的ACK确认，再收到旧包时就不会再浪费资源进行处理。
 
-## **TCP四次挥手过程** 
+##  TCP四次挥手过程
 
 ![img](assets/1647149929992-36babdad-1943-4161-b4c4-d7ed507844ce.png)
 
@@ -113,7 +113,7 @@ UDP报文过长的话是交给IP切成小段，如果某段报废报文就废了
 
 \4. 第四次挥手。客户端收到服务器的 FIN 包后，发出确认包（ACK=1，ack=w+1），此时客户端就进入了 TIME_WAIT 状态。注意此时 TCP 连接还没有释放，必须经过 2*MSL 后，才进入 CLOSED 状态。而服务器端收到客户端的确认包 ACK 后就进入了 CLOSED 状态，可以看出服务器端结束 TCP 连接的时间要比客户端早一些。 
 
-## **为什么TCP握手三次，挥手需要4次** 
+## 为什么TCP握手三次，挥手需要4次
 
 在 TCP 握手的时候，服务端发送 SYN+ACK 的包是将一个 ACK 和一个 SYN 合并到一个包中，所以减少了一次包的发送，三次完成握手。
 
