--- a/03 计算机基础/操作系统.md
+++ b/03 计算机基础/操作系统.md
@@ -46,9 +46,8 @@
 
 ## 并发和并行的区别 
 
-\1. 并发（concurrency）：打麻将的出牌。指宏观上看起来两个程序在同时运行，比如说在单核cpu上的多任务。但是从微观上看两个程序的指令是交织着运行的，指令之间交错执行，在单个周期内只运行了一个指令。这种并发并不能提高计算机的性能，只能提高效率（如降低某个进程的相应时间）。 
-
-\2. 并行（parallelism）：打麻将的洗牌。指严格物理意义上的同时运行，比如多核cpu，两个程序分别运行在两个核上，两者之间互不影响，单个周期内每个程序都运行了自己的指令，也就是运行了两条指令。这样说来并行的确提高了计算机的效率。所以现在的cpu都是往多核方面发展。 
+1. 并发（concurrency）：打麻将的出牌。指宏观上看起来两个程序在同时运行，比如说在单核cpu上的多任务。但是从微观上看两个程序的指令是交织着运行的，指令之间交错执行，在单个周期内只运行了一个指令。这种并发并不能提高计算机的性能，只能提高效率（如降低某个进程的相应时间）。 
+2. 并行（parallelism）：打麻将的洗牌。指严格物理意义上的同时运行，比如多核cpu，两个程序分别运行在两个核上，两者之间互不影响，单个周期内每个程序都运行了自己的指令，也就是运行了两条指令。这样说来并行的确提高了计算机的效率。所以现在的cpu都是往多核方面发展。 
 
 # 进程管理
 
@@ -305,7 +304,7 @@ Socket传输的是字节流，Async*Socke封装的库以NSData的形式传输。
 
 进程API以Unix系统为例，线程相关的API属于Posix线程(Pthreads)标准接口。
 
-![img](assets/1647149798470-d6f56e0a-f979-49b7-8da4-a3c587c50263.png)
+![img](../assets/1647149798470-d6f56e0a-f979-49b7-8da4-a3c587c50263.png)
 
 ## 多线程模型 
 
