--- a/04 数据库/MySQL/优化问题.md
+++ b/04 数据库/MySQL/优化问题.md
@@ -19,7 +19,7 @@ possible_key 可能用的索引 key 实际用的索引 key_len 索引长度
 
 主要关注一下type连接类型 性能由好到差 **NULL，system，const** .....range, all
 
-![img](assets/1648288698896-ae920791-9b65-4531-b60e-8085e8013830.png)
+![img](../assets/1648288698896-ae920791-9b65-4531-b60e-8085e8013830.png)
 
 ## SQL提示
 
@@ -54,7 +54,7 @@ force (idx_name)index 强制使用某个索引
 
 **目的**：提前性能（单库数据量过大，查询和读写效率变低，拆库可以不仅可以提高性能，还能缓解单库的连接压力）、 增加可用性（单个数据库如果发生意外，很可能会丢失所有数据。尤其是[云时代](https://www.zhihu.com/search?q=云时代&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra={"sourceType":"answer","sourceId":1774351830}" \t "https://www.zhihu.com/question/448775613/answer/_blank)，很多数据库都跑在虚拟机上，如果虚拟机发生意外，则可能造成无法挽回的损失）。
 
-![img](assets/1647149877490-99b67ae8-3793-45e2-b99c-2a70f8aa8485.jpeg)
+![img](../assets/1647149877490-99b67ae8-3793-45e2-b99c-2a70f8aa8485.jpeg)
 
 ## 一条sql执行过长的时间，你如何优化，从哪些方面入手？
 
