--- a/05 算法笔记/排序算法.md
+++ b/05 算法笔记/排序算法.md
@@ -1,6 +1,10 @@
 # 排序算法
-![[Pasted image 20220803233517.png]]
-![[Pasted image 20220803233531.png]]
+![Pasted image 20220803233531](../assets/Pasted%20image%2020220803233517.png)
+
+![Pasted image 20220803233531](../assets/Pasted%20image%2020220803233531.png)
+
+
+
 ## 插入排序
 
 插入排序：每一趟将一个待排序记录按其关键字的大小插入到已排好序的一组记录的适当位置上，直到所有待排序记录全部插入为止。 （整理扑克牌的原理）
