--- a/03 计算机基础/设计模式.md
+++ b/03 计算机基础/设计模式.md
@@ -1,6 +1,5 @@
 ## 简述设计模式七大原则
-开放封闭原则:对扩展开放，对修改关闭。在程序需要进行拓展的时候，不能去修改原有的代码，实现
-一个热插拔的效果。
+开放封闭原则:对扩展开放，对修改关闭。在程序需要进行拓展的时候，不能去修改原有的代码，实现一个热插拔的效果。
 单一职责原则:一个类、接口或方法只负责一个职责，降低代码复杂度以及变更引起的风险。 
 依赖倒置原则:针对接口编程，依赖于抽象类或接口而不依赖于具体实现类。 
 接口隔离原则:将不同功能定义在不同接口中实现接口隔离。 
