--- a/03 计算机基础/设计模式.md
+++ b/03 计算机基础/设计模式.md
@@ -1,3 +1,4 @@
+# 概述
 ## 简述设计模式七大原则
 开放封闭原则:对扩展开放，对修改关闭。在程序需要进行拓展的时候，不能去修改原有的代码，实现一个热插拔的效果。
 单一职责原则:一个类、接口或方法只负责一个职责，降低代码复杂度以及变更引起的风险。 
@@ -14,21 +15,13 @@
 行为型模式:通过类之间不同通信方式实现不同行为。有策略模式、模板方法模式、观察者模式、迭代
 子模式、责任链模式、命令模式、备忘录模式、状态模式、访问者模式、中介者模式、解释器模式。
 
-## 简述简单工厂模式
-
-简单工厂模式指由一个工厂对象来创建实例,适用于工厂类负责创建对象较少的情况。例子:Spring 中 的 BeanFactory 使用简单工厂模式，产生 Bean 对象。
-
-## 简述工厂模式
-
-工厂方法模式指定义一个创建对象的接口，让接口的实现类决定创建哪种对象，让类的实例化推迟到子 类中进行。例子:Spring 的 FactoryBean 接口的 getObject 方法也是工厂方法。
-
-## 简述抽象工厂模式
-
-抽象工厂模式指提供一个创建一系列相关或相互依赖对象的接口，无需指定它们的具体类。例子: java.sql.Connection 接口。
+# 创建型
 
 ## 简述单例模式
 
+使用一个私有构造函数、一个私有静态变量以及一个公有静态函数来实现
 一个单例类在任何情况下都只存在一个实例。
+
 饿汉式实现
 ```JAVA
 public class Singleton {
@@ -63,6 +56,18 @@ public class Singleton {
 
 }
 ```
+## 简述简单工厂模式
+
+简单工厂模式指由一个工厂对象来创建实例,适用于工厂类负责创建对象较少的情况。例子:Spring 中 的 BeanFactory 使用简单工厂模式，产生 Bean 对象。
+
+## 简述工厂模式
+
+工厂方法模式指定义一个创建对象的接口，让接口的实现类决定创建哪种对象，让类的实例化推迟到子 类中进行。例子:Spring 的 FactoryBean 接口的 getObject 方法也是工厂方法。
+
+## 简述抽象工厂模式
+
+抽象工厂模式指提供一个创建一系列相关或相互依赖对象的接口，无需指定它们的具体类。例子: java.sql.Connection 接口。
+
 
 ## 简述代理模式
 
