--- a/00 面试相关/简历.md
+++ b/00 面试相关/简历.md
@@ -1,8 +1,9 @@
 <div>
-<img src="./assets/简历.png" style="float:right" width=15% height=AUTO/>
+<img src="../assets/简历.png" style="float:right" width=15% height=AUTO/>
 <b><font size = 5>李凯欣</font></b><br>
   <font size = 3>电话：<b>15579470910</b></font><br><font size = 3>邮箱：<b>cassieleeh@foxmail.com</b><br></font><font size = 3>性别：女</font><br><font size = 3>出生年月：1996.09.22</font><br>
 </div>
+
 
 ---
 
