--- a/00 面试相关/简历.md
+++ b/00 面试相关/简历.md
@@ -1,5 +1,5 @@
 <div>
-<img src="../assets/简历.png" style="float:right" width=15% height=AUTO/>
+<img src="../assets/简历.png" style="float:right" width=14% height=AUTO/>
 <b><font size = 5>李凯欣</font></b><br>
   <font size = 3>电话：<b>15579470910</b></font><br><font size = 3>邮箱：<b>cassieleeh@foxmail.com</b><br></font><font size = 3>性别：女</font><br><font size = 3>出生年月：1996.09.22</font><br>
 </div>
@@ -26,8 +26,8 @@
 ###  项目与工作经历
 
 - **2021.06 - 至今                 华为技术有限公司 - 华为云 - 数据中心 - 云计算开发工程师实习生** 
-  - 项目：华为云天枢系统业务架构-骨干网调度系统镜像微服务框架
-  - 后端开发，主要负责通过现网数据反向生成原始数据，构建第三方API和南向API返回对应查询数据；实现框架性能测试功能，利用Quartz框架实现大规模数据上线和随机震荡功能；通过SQL文件导入现网数据功能等。
+  - 项目：华为云天枢系统业务架构-骨干网调度系统镜像微服务框架 -后端开发
+  - 主要负责通过SQL文件导入现网数据，利用现网数据反向生成原始数据；构建第三方API返回对应查询数据；模拟南向API的Pcep协议的MBB过程；实现框架性能测试功能，利用Quartz框架实现大规模数据上线和随机震荡功能等。
   - 技术栈：Java + Maven + Spring Boot + Mybatis + Redis + Kafka 
 -  **2020.09 - 至今                实验室项目 - 基于区块链和联邦学习疾病诊断框架**
   - 主要研究联邦算法用于Non-IID场景下的疾病预测和利用区块链解决联邦学习激励机制问题。
